--- a/src/components/layout/FooterComponent/FooterComponent.css
+++ b/src/components/layout/FooterComponent/FooterComponent.css
@@ -1,5 +1,7 @@
 .footer {
+    height: 5rem;
     display: flex;
+    
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.1);
