--- a/src/components/layout/MainComponent/MainComponent.css
+++ b/src/components/layout/MainComponent/MainComponent.css
@@ -1,5 +1,6 @@
 .main {
     display: flex;
+    height: 100%;
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.1);
