--- a/src/components/layout/MainComponent/MainComponent.css
+++ b/src/components/layout/MainComponent/MainComponent.css
@@ -1,10 +1,7 @@
+/* Main Component Styles */
 .main {
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid white;
-    border-radius: 1rem;
-    padding: 0 1rem 0 1rem;
+  flex: 1;
+  width: 100%;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
